--- a/parish/parish_Template.Rmd
+++ b/parish/parish_Template.Rmd
@@ -19,6 +19,8 @@ bibliography: '`r  path.expand("~/bibliography.bib")`'
 ---
 
 ```{r setup, include=FALSE}
+#![logo](uos-logo.png)
+
 knitr::opts_chunk$set(echo = FALSE)
 knitr::opts_chunk$set(fig.width=7)
 
@@ -27,21 +29,25 @@ library(ggplot2)
 
 # overwrite in run mode
 parish <- params$parish
-la <- params$la
 
-# load the data and melt it to long form as we go
+# load the parish data then melt it to long form ----
+#> territorial ----
 parish_terr_abs <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-territorial-absolute.csv")
-mdt <- melt(data.table::fread(parish_terr_abs), id.vars = c("id", "name"))
+dt <- data.table::fread(parish_terr_abs) # keep wide
+parish_code <- dt[name == parish, id] # extract parish code for LA matching
+mdt <- melt(dt, id.vars = c("id", "name"))
 parish_terr_absDT <- mdt[variable != "Power generation (t CO2e)"]
 parish_terr_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-territorial-per-household.csv")
 mdt <- melt(data.table::fread(parish_terr_perhh), id.vars = c("id", "name"))
 parish_terr_perhhDT <- mdt[variable != "Power generation (t CO2e)"]
 
+#> consumption ----
 parish_cons_abs <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-consumption-absolute.csv")
 parish_cons_absDT <- melt(data.table::fread(parish_cons_abs), id.vars = c("id", "name"))
 parish_cons_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-consumption-per-household.csv")
 parish_cons_perhhDT <- melt(data.table::fread(parish_cons_perhh), id.vars = c("id", "name"))
 
+# load district data ----
 la_terr_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/local-authority-all-territorial-per-household.csv.gz")
 mdt <- melt(data.table::fread(la_terr_perhh), id.vars = c("id", "name"))
 la_terr_perhhDT <- mdt[variable != "Power generation (t CO2e)"]
@@ -52,7 +58,8 @@ la_cons_perhhDT <- melt(data.table::fread(la_cons_perhh), id.vars = c("id", "nam
 # select the district ----
 #> xx fails for unitary authorities why? XX ----
 lut_DT <- data.table::fread("~/Dropbox/data/UK_census/lookups/Parishes__December_2020__Names_and_Codes_in_England_and_Wales_V2.csv")
-la <- lut_DT[PAR20NM == parish, LAD20NM]
+# need to use the exact parish code to allow for duplicate names etc
+la <- lut_DT[PAR20CD == parish_code, LAD20NM]
 
 ```
 
@@ -85,7 +92,7 @@ cse_terr_catList2 <- c(cse_terr_catList[1:15], cse_terr_catList[17:18],
 names(cse_terr_colours) <- cse_terr_catList2 # associate the names (in this order) with the colours
 ```
 
-```{r setCOnsColours}
+```{r setConsColours}
 library(stringr)
 parish_cons_absDT[, variable_n := stringr::str_remove(variable, "Consumption of goods and services - ")]
 parish_cons_perhhDT[, variable_n := stringr::str_remove(variable, "Consumption of goods and services - ")]
