--- a/parish/parish_Template.Rmd
+++ b/parish/parish_Template.Rmd
@@ -3,6 +3,7 @@ params:
   title: ""
   subtitle: ""
   parish: ""
+  district: ""
 title: '`r params$title`'
 subtitle: '`r params$subtitle`'
 output:
@@ -24,47 +25,15 @@ bibliography: '`r  path.expand("~/bibliography.bib")`'
 knitr::opts_chunk$set(echo = FALSE)
 knitr::opts_chunk$set(fig.width=7)
 
-library(data.table)
+
 library(ggplot2)
-
-# overwrite in run mode
-parish <- params$parish
-
-# load the parish data then melt it to long form ----
-#> territorial ----
-parish_terr_abs <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-territorial-absolute.csv")
-dt <- data.table::fread(parish_terr_abs) # keep wide
-parish_code <- dt[name == parish, id] # extract parish code for LA matching
-mdt <- melt(dt, id.vars = c("id", "name"))
-parish_terr_absDT <- mdt[variable != "Power generation (t CO2e)"]
-parish_terr_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-territorial-per-household.csv")
-mdt <- melt(data.table::fread(parish_terr_perhh), id.vars = c("id", "name"))
-parish_terr_perhhDT <- mdt[variable != "Power generation (t CO2e)"]
-
-#> consumption ----
-parish_cons_abs <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-consumption-absolute.csv")
-parish_cons_absDT <- melt(data.table::fread(parish_cons_abs), id.vars = c("id", "name"))
-parish_cons_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/2021-12-07/parish-all-consumption-per-household.csv")
-parish_cons_perhhDT <- melt(data.table::fread(parish_cons_perhh), id.vars = c("id", "name"))
-
-# load district data ----
-la_terr_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/local-authority-all-territorial-per-household.csv.gz")
-mdt <- melt(data.table::fread(la_terr_perhh), id.vars = c("id", "name"))
-la_terr_perhhDT <- mdt[variable != "Power generation (t CO2e)"]
-
-la_cons_perhh <- path.expand("~/Dropbox/data/cse/cse_ImpactTool/local-authority-all-consumption-per-household.csv.gz")
-la_cons_perhhDT <- melt(data.table::fread(la_cons_perhh), id.vars = c("id", "name"))
-
-# select the district ----
-#> xx fails for unitary authorities why? XX ----
-lut_DT <- data.table::fread("~/Dropbox/data/UK_census/lookups/Parishes__December_2020__Names_and_Codes_in_England_and_Wales_V2.csv")
-# need to use the exact parish code to allow for duplicate names etc
-la <- lut_DT[PAR20CD == parish_code, LAD20NM]
+library(RColorBrewer)
+library(stringr)
 
 ```
 
 ```{r setTerrColours}
-# set the colours ---
+# set the territorial colours ---
 # colours borrowed from https://git.soton.ac.uk/twr1m15/la_emissions_viz/-/blob/master/shiny/app.R
 # for details, use set for each sector
 cse_terr_domestic_pal <- RColorBrewer::brewer.pal(n = 8, name = "Blues")[3:8]    # domestic blues, 6 categories
@@ -93,7 +62,7 @@ names(cse_terr_colours) <- cse_terr_catList2 # associate the names (in this orde
 ```
 
 ```{r setConsColours}
-library(stringr)
+
 parish_cons_absDT[, variable_n := stringr::str_remove(variable, "Consumption of goods and services - ")]
 parish_cons_perhhDT[, variable_n := stringr::str_remove(variable, "Consumption of goods and services - ")]
 
@@ -133,7 +102,7 @@ names(cse_cons_colours) <- cse_cons_catList # associate the names (in this order
 
 The graphs that follow show the estimated 2017/18 greenhouse gas emissions for:
 
- * **`r parish`** (Local Authority district: _`r la`_)
+ * **`r params$parish`** (Local Authority district: _`r params$district`_)
 
 The graphs show emissions estimated using two methods:
 
@@ -160,9 +129,9 @@ See the [CSE guidance on using the data](https://impact-tool.org.uk/using-the-to
 ## Which are our biggest territorial emissions sources?
 
 ```{r parishAbsoluteTerrPlot, fig.height=4}
-plotDT <- parish_terr_absDT[name == parish]
+plotDT <- parish_terr_absDT[name == params$parish]
 parish_terr_sum_kT <- sum(plotDT$value)/1000
-myCap <- paste0(parish, ": total territorial emissions = ", round(parish_terr_sum_kT,1), " kT CO2e")
+myCap <- paste0(params$parish, ": total territorial emissions = ", round(parish_terr_sum_kT,1), " kT CO2e")
 p <- ggplot2::ggplot(plotDT, aes(x = reorder(variable, -value), 
                        y = value,
                        fill = variable)) +
@@ -217,8 +186,8 @@ p
 ## How do our per household territorial emissions compare with our district?
 
 ```{r parishLaPerhhTerrPlot, fig.height=4, warning=FALSE}
-parDT <- parish_terr_perhhDT[name == parish]
-laDT <- la_terr_perhhDT[name == la]
+parDT <- parish_terr_perhhDT[name == params$parish]
+laDT <- la_terr_perhhDT[name == params$district]
 plotDT <- rbind(parDT, laDT)
 
 p <- ggplot2::ggplot(plotDT, aes(x = reorder(variable, -value), 
@@ -243,19 +212,19 @@ sum_d_perhh <- sum(laDT$value)
 
 For comparison:
 
- * `r parish` total per household territorial emissions = `r round(sum_p_perhh,1)` T CO2e
- * `r la` total per household territorial emissions = `r round(sum_d_perhh,1)` T CO2e
+ * `r params$parish` total per household territorial emissions = `r round(sum_p_perhh,1)` T CO2e
+ * `r params$district` total per household territorial emissions = `r round(sum_d_perhh,1)` T CO2e
  
 \newpage
 
 ## Which are our biggest consumption emissions sources?
 
 ```{r parishAbsoluteConsPlot, fig.height=4}
-plotDT <- parish_cons_absDT[name == parish]
+plotDT <- parish_cons_absDT[name == params$parish]
 parish_cons_sum_kT <- sum(plotDT$value)/1000
 pcDiff <- 100*parish_cons_sum_kT/parish_terr_sum_kT
 
-myCap <- paste0(parish, ": total consumption emissions = ", round(parish_cons_sum_kT,1), " kT CO2e, ",
+myCap <- paste0(params$parish, ": total consumption emissions = ", round(parish_cons_sum_kT,1), " kT CO2e, ",
                 round(pcDiff) , " % of our territorial emissions")
 
 p <- ggplot2::ggplot(plotDT, aes(x = reorder(variable_n, -value), 
@@ -311,8 +280,8 @@ p
 ## How do our per household consumption emissions compare with our district?
 
 ```{r parishLaPerhhConsPlot, fig.height=4, warning=FALSE}
-parDT <- parish_cons_perhhDT[name == parish, .(id, name, variable_n,  value)]
-laDT <- la_cons_perhhDT[name == la, .(id, name, variable_n,  value)]
+parDT <- parish_cons_perhhDT[name == params$parish, .(id, name, variable_n,  value)]
+laDT <- la_cons_perhhDT[name == params$district, .(id, name, variable_n,  value)]
 plotDT <- rbind(parDT, laDT)
 
 p <- ggplot2::ggplot(plotDT, aes(x = reorder(variable_n, -value), 
@@ -336,8 +305,8 @@ sum_d_perhh <- sum(laDT$value)
 
 For comparison:
 
- * `r parish` total per household consumption emissions = `r round(sum_p_perhh,1)` T CO2e
- * `r la` total per household consumption emissions = `r round(sum_d_perhh,1)` T CO2e
+ * `r params$parish` total per household consumption emissions = `r round(sum_p_perhh,1)` T CO2e
+ * `r params$district` total per household consumption emissions = `r round(sum_d_perhh,1)` T CO2e
 
 \newpage
 
@@ -348,7 +317,7 @@ The parish data tables used to create the plots - if you need the numbers.
 ## Territorial emissions
 
 ```{r terrTable, warning=FALSE}
-makeFlexTable(parish_terr_absDT[name == parish], cap = "Parish territorial emissions")
+makeFlexTable(parish_terr_absDT[name == params$parish], cap = "Parish territorial emissions")
 ```
 
 \newpage
@@ -356,7 +325,7 @@ makeFlexTable(parish_terr_absDT[name == parish], cap = "Parish territorial emiss
 ## Consumption emissions
 
 ```{r consTable, warning=FALSE}
-makeFlexTable(parish_cons_absDT[name == parish, .(id,parish, variable_n, value)], cap = "Parish consumption emissions")
+makeFlexTable(parish_cons_absDT[name == params$parish, .(id,parish, variable_n, value)], cap = "Parish consumption emissions")
 ```
 
 \newpage
